Answer, question 엔티티 추가 후 로그인 ì이 필요한 곳에 로그인창으로 유도하게 변경